fix the active state problem
by divide the rect on 1.5 it assure that even if the whole content is
not visible in the view port -in mobile view- it will still have the
active class

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,13 @@ section {
   transition: all 0.3;
 }
 
+@media (max-width: 376px) {
+  .navbar__menu li {
+    font-size: 12px;
+    margin: 2px;
+  }
+}
+
 .navbar__menu li a {
   display: block;
   text-decoration: none;
